--- a/src/home-page/Card.module.css
+++ b/src/home-page/Card.module.css
@@ -20,15 +20,9 @@
   border-bottom-right-radius: 2rem;
 }
 
-.card-text:hover > h2 span {
-  margin-left: 0;
-  padding: 0.2rem 1rem;
-  transition: all 0.3s;
-}
-
 .card-text h2 span {
   margin-left: 1rem;
-  padding: 0 0;
+  padding: 0 1rem;
   font-size: 1.6rem;
   border: 0.5rem solid #0000;
   background: conic-gradient(
