--- a/src/home-page/HomePage.module.css
+++ b/src/home-page/HomePage.module.css
@@ -1,9 +1,17 @@
 .header {
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   position: sticky;
   z-index: 1;
   top: 0;
+  overflow: hidden;
+  height: 4rem;
+  transition: all 0.3s;
+}
+
+.hidden {
+  height: 0;
+  transition: all 0.3s;
 }
 
 .hero {
@@ -36,6 +44,8 @@
   top: 50%;
   transform: translate(0%, -50%);
   text-align: center;
+  display: flex;
+  align-items: center;
 }
 
 .nav-button {
@@ -43,7 +53,7 @@
   width: 5%;
   aspect-ratio: 1 / 1;
   right: 2%;
-  bottom: 16%;
+  bottom: 8%;
   border-radius: 100%;
   background-color: rgba(255, 255, 255, 0.2);
   border: solid 0.2rem #fff;
@@ -51,11 +61,15 @@
   padding: 1rem;
   display: flex;
   align-items: center;
-  transition: all 0.3s;
+  transition: width 0.3s 0.3s, padding 0.3s 0.3s;
+}
+
+.hidden-button {
+  width: 0%;
+  padding: 0;
 }
 
 .nav-button:hover {
-  /* border: solid 0.2rem #fff; */
   background-color: rgba(255, 255, 255, 0.6);
   cursor: pointer;
   transition: all 0.3s;
@@ -63,15 +77,17 @@
 
 .header h2 {
   padding: 1rem;
+  text-shadow: 2px 1px #555;
 }
 
 .container {
   padding: 2%;
+  margin-top: 1px;
 }
 
 .footer {
-  background-color: #000;
-  width: 100vw;
+  background-color: #111;
+  width: 100%;
   position: sticky;
   bottom: 0;
   text-align: center;
